Document how to run JMH benchmark.